--- a/styles/_selectores.scss
+++ b/styles/_selectores.scss
@@ -125,6 +125,14 @@
   padding-right: 20px;
 }
 
+#botonEditUser {
+  background: var(--color7);
+  margin-left: auto;
+  margin-right: 25px;
+  color: var(--colorB);
+
+}
+
 #botonAddRefu, #botonAddPerso, #botonAddMasco {
   background: var(--color6);
   margin-left: auto;
@@ -137,7 +145,7 @@
     margin-bottom: 10px;
   }
 
-  #botonAddRefu, #botonAddPerso, #botonAddMasco {
+  #botonAddRefu, #botonAddPerso, #botonAddMasco, #botonEditUser {
     margin-right: 0px;
   }
 }
@@ -148,7 +156,7 @@
     margin-bottom: 10px;
   }
 
-  #botonAddRefu, #botonAddPerso, #botonAddMasco {
+  #botonAddRefu, #botonAddPerso, #botonAddMasco, #botonEditUser {
     margin-right: 0px;
   }
 }
