--- a/styles/_enIndex.scss
+++ b/styles/_enIndex.scss
@@ -591,3 +591,38 @@ body {
   display: flex;
 }
 
+.mainviewAjustes {
+  margin-left: 50px;
+  margin-right: 50px;
+  height: 600px;
+  background-color: var(--color4);
+  display: flex;
+  overflow: hidden;
+}
+
+@media (max-width: 767px) {
+  .mainviewAjustes {
+    margin-left: 25px;
+    margin-right: 25px;
+    overflow-y: auto;
+  }
+}
+
+@media (min-width: 1024px) and (max-width: 1367px) {
+  .mainviewAjustes {
+    height: 445px;
+  }
+}
+
+.ajustesCol1{
+  background-color: red;
+  flex-grow: 1;
+}
+.ajustesCol2{
+  background-color: green;
+  flex-grow: 2;
+}
+.ajustesCol3{
+  background-color: purple;
+  flex-grow: 2;
+}
