updated with new buttons

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -3,7 +3,7 @@
 @use "tablas";
 @use "selectores";
 @use "toasts";
-@use "uploaderIcon";
+@use "buttonStyles";
 
 html {
   background: var(--color3);
