--- a/styles/style.css
+++ b/styles/style.css
@@ -127,29 +127,6 @@
   background-size: 20px;
 }
 
-.butLog {
-  width: 300px;
-  height: 50px;
-  margin-top: 50px;
-  border-radius: 12px;
-  margin-bottom: 20px;
-  font-family: "Montserrat", sans-serif;
-  text-decoration: none;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  color: #000000;
-  border: 1px solid #4ebbf2;
-  transition: background-color 1s ease-in-out, color 1s ease-in-out;
-}
-
-.butLog:hover {
-  background-color: var(--color3);
-  color: var(--colorW);
-  cursor: pointer;
-}
-
 .hugeContenedor {
   width: 800px;
   height: 800px;
@@ -276,36 +253,6 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   background: url("../images/phone-solid.svg") no-repeat right;
   background-position: 96% 50%;
   background-size: 20px;
-}
-
-.butLogINV {
-  width: 300px;
-  height: 50px;
-  margin-top: 50px;
-  border-radius: 12px;
-  margin-bottom: 20px;
-  font-family: "Montserrat", sans-serif;
-  text-decoration: none;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  color: var(--colorW);
-  border: 1px solid #4ebbf2;
-  background-color: var(--color3);
-  transition: background-color 1s ease-in-out, color 1s ease-in-out;
-}
-
-@media (max-width: 420px) {
-  .butLogINV {
-    margin-top: 10px;
-    margin-bottom: 10px;
-  }
-}
-.butLogINV:hover {
-  background-color: var(--colorW);
-  color: #000000;
-  cursor: pointer;
 }
 
 .subtLog2 {
@@ -945,53 +892,6 @@ body:not(.nohover) tbody tr:hover {
     gap: 0px;
   }
 }
-.botonEnSelect {
-  min-width: 115px;
-  height: 40px;
-  background: var(--color3);
-  color: var(--colorW);
-  border: 0;
-  margin-right: 30px;
-  font-family: "Oswald", sans-serif;
-  font-size: 18px;
-  cursor: pointer;
-  padding-left: 20px;
-  padding-right: 20px;
-}
-
-#botonEditUser {
-  background: var(--color7);
-  margin-left: auto;
-  margin-right: 25px;
-  color: var(--colorB);
-}
-
-#botonAddRefu, #botonAddPerso, #botonAddMasco {
-  background: var(--color6);
-  margin-left: auto;
-  margin-right: 25px;
-}
-
-@media (min-width: 421px) and (max-width: 1024px) {
-  .botonEnSelect {
-    margin-top: 10px;
-    margin-bottom: 10px;
-  }
-
-  #botonAddRefu, #botonAddPerso, #botonAddMasco, #botonEditUser {
-    margin-right: 0px;
-  }
-}
-@media (max-width: 420px) {
-  .botonEnSelect {
-    margin-top: 10px;
-    margin-bottom: 10px;
-  }
-
-  #botonAddRefu, #botonAddPerso, #botonAddMasco, #botonEditUser {
-    margin-right: 0px;
-  }
-}
 #toastOK {
   visibility: hidden;
   width: 400px;
@@ -1091,15 +991,16 @@ body:not(.nohover) tbody tr:hover {
   border-radius: 50%;
   position: relative;
   box-sizing: border-box;
+  cursor: pointer;
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 4px solid #2590EB;
+  border: 3px solid var(--color3);
   overflow: hidden;
-  background-image: linear-gradient(to bottom, #2590EB 50%, #FFFFFF 50%);
+  background-image: linear-gradient(to bottom, var(--color3) 50%, var(--colorW) 50%);
   background-size: 100% 200%;
   transition: all 1s;
-  color: #FFFFFF;
+  color: var(--colorW);
   font-size: 30px;
 }
 .uploadWrapper .file-upload input[type=file] {
@@ -1113,9 +1014,101 @@ body:not(.nohover) tbody tr:hover {
 }
 .uploadWrapper .file-upload:hover {
   background-position: 0 -100%;
-  color: #2590EB;
+  color: var(--color3);
 }
 
+.butLog {
+  min-width: 300px;
+  height: 50px;
+  border-radius: 12px;
+  text-decoration: none;
+  font-family: "Montserrat", sans-serif;
+  font-size: 16px;
+  position: relative;
+  margin-top: 50px;
+  box-sizing: border-box;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 3px solid var(--color3);
+  overflow: hidden;
+  background-image: linear-gradient(to bottom, var(--color3) 50%, var(--colorW) 50%);
+  background-size: 100% 200%;
+  transition: all 1s;
+  color: var(--colorW);
+}
+.butLog:hover {
+  background-position: 0 -100%;
+  color: var(--color3);
+}
+
+.butLogINV {
+  border: 3px solid var(--color3);
+  background-image: linear-gradient(to bottom, var(--colorW) 50%, var(--color3) 50%);
+  color: var(--color3);
+}
+.butLogINV:hover {
+  color: var(--colorW);
+}
+
+.butLogSelect {
+  min-width: 115px;
+  height: 40px;
+  margin-right: 30px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+#botonEditUser {
+  border: 3px solid var(--color7);
+  background-image: linear-gradient(to bottom, var(--color7) 50%, var(--colorW) 50%);
+  color: var(--colorB);
+  margin-left: auto;
+  margin-right: 25px;
+}
+
+#botonAddRefu,
+#botonAddPerso,
+#botonAddMasco {
+  border: 3px solid var(--color6);
+  background-image: linear-gradient(to bottom, var(--color6) 50%, var(--colorW) 50%);
+  color: var(--colorW);
+  margin-left: auto;
+  margin-right: 25px;
+}
+#botonAddRefu:hover,
+#botonAddPerso:hover,
+#botonAddMasco:hover {
+  color: var(--color6);
+}
+
+@media (min-width: 421px) and (max-width: 1024px) {
+  .botonEnSelect {
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+
+  #botonAddRefu,
+#botonAddPerso,
+#botonAddMasco,
+#botonEditUser {
+    margin-right: 0px;
+  }
+}
+@media (max-width: 420px) {
+  .botonEnSelect {
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+
+  #botonAddRefu,
+#botonAddPerso,
+#botonAddMasco,
+#botonEditUser {
+    margin-right: 0px;
+  }
+}
 html {
   background: var(--color3);
   --colorW: #FFFFFF;
