toast updates analisis icon

--- a/styles/_toasts.scss
+++ b/styles/_toasts.scss
@@ -10,12 +10,13 @@
     top: 100px;
     font-size: 24px;
     font-family: 'Oswald', sans-serif;
+    z-index: 2;
   }
   
   #toastOK.show {
     visibility: visible;
-    -webkit-animation: fadein 1.5s, fadeout 1.5s 2s;
-    animation: fadein 1.5s, fadeout 1.5s 2s;
+    -webkit-animation: fadein 1.5s, fadeout 1.5s 4s;
+    animation: fadein 1.5s, fadeout 1.5s 4s;
     border-radius: 0px 0px 0px 25px;
   }
   
@@ -31,12 +32,13 @@
     top: 100px;
     font-size: 24px;
     font-family: 'Oswald', sans-serif;
+    z-index: 2;
   }
-  
+
   #toastNOT.show {
     visibility: visible;
-    -webkit-animation: fadein 1.5s, fadeout 1.5s 2s;
-    animation: fadein 1.5s, fadeout 1.5s 2s;
+    -webkit-animation: fadein 1.5s, fadeout 1.5s 3s;
+    animation: fadein 1.5s, fadeout 1.5s 3s;
     border-radius: 0px 0px 0px 25px;
   }
 
