--- a/styles/_enIndex.scss
+++ b/styles/_enIndex.scss
@@ -106,7 +106,10 @@
   }
 }
 
-
+.segundoSubtLog {
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
 
 .inputField {
   padding-left: 15px;
@@ -632,5 +635,5 @@ body {
   .mainviewAjustes {
     margin-left: 50px;
     margin-right: 50px;
-  } 
+  }
 }
