--- a/styles/style.css
+++ b/styles/style.css
@@ -98,6 +98,11 @@
     text-align: center;
   }
 }
+.segundoSubtLog {
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
 .inputField {
   padding-left: 15px;
   padding-right: 25px;
@@ -389,7 +394,6 @@ body {
     padding-left: 25px;
     padding-right: 25px;
   }
-
   .menuItem:hover {
     max-width: 375px;
   }
@@ -661,7 +665,6 @@ body {
     padding-top: 25px;
     padding-left: 40px;
   }
-
   .menuItem {
     margin-top: 10px;
     margin-bottom: 10px;
@@ -672,7 +675,6 @@ body {
   #browseMobile {
     display: flex;
   }
-
   .fa-solid {
     min-width: 30px;
   }
@@ -748,7 +750,6 @@ table th {
   table {
     border: 0;
   }
-
   table thead {
     border: none;
     clip: rect(0 0 0 0);
@@ -759,32 +760,27 @@ table th {
     position: absolute;
     width: 1px;
   }
-
   table tr {
     border-bottom: 1px solid var(--color4);
     display: block;
     margin-bottom: 15px;
   }
-
   table td {
     border-bottom: 1px solid var(--color4);
     display: block;
     font-size: 16px;
     text-align: right;
   }
-
   table td::before {
     content: attr(data-label);
     float: left;
     font-weight: bold;
     text-transform: uppercase;
   }
-
   table td:first-child {
     background-color: var(--color3);
     color: var(--colorW);
   }
-
   table td:last-child {
     border-bottom: 0;
   }
@@ -1050,7 +1046,7 @@ body:not(.nohover) tbody tr:hover {
   font-family: "Montserrat", sans-serif;
   font-size: 16px;
   position: relative;
-  margin-top: 50px;
+  margin-top: 25px;
   box-sizing: border-box;
   cursor: pointer;
   display: flex;
@@ -1113,7 +1109,6 @@ body:not(.nohover) tbody tr:hover {
     margin-top: 10px;
     margin-bottom: 10px;
   }
-
   #botonAddRefu,
 #botonAddPerso,
 #botonAddMasco,
@@ -1126,7 +1121,6 @@ body:not(.nohover) tbody tr:hover {
     margin-top: 10px;
     margin-bottom: 10px;
   }
-
   #botonAddRefu,
 #botonAddPerso,
 #botonAddMasco,
