--- a/styles/style.css
+++ b/styles/style.css
@@ -1128,6 +1128,29 @@ body:not(.nohover) tbody tr:hover {
     margin-right: 0px;
   }
 }
+dialog {
+  border: 3px solid var(--color3);
+  border-radius: 25px;
+  max-width: 80vw;
+}
+
+dialog::-webkit-backdrop {
+  background-color: rgba(0, 0, 0, 0.5);
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
+}
+
+dialog::backdrop {
+  background-color: rgba(0, 0, 0, 0.5);
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
+}
+
+.modalTitle {
+  font-family: "Oswald", sans-serif;
+  font-size: 24px;
+}
+
 html {
   background: var(--color3);
   --colorW: #FFFFFF;
