--- a/styles/_tablas.scss
+++ b/styles/_tablas.scss
@@ -8,6 +8,11 @@ table {
   font-family: 'Montserrat', sans-serif;
 }
 
+.dialogTable{
+  margin-top: 25px;
+  width: auto;
+}
+
 table tr {
   background-color: var(--colorW);
   border: 1px solid var(--color4);
