--- a/styles/style.css
+++ b/styles/style.css
@@ -1095,7 +1095,9 @@ body:not(.nohover) tbody tr:hover {
 
 #botonEditUser,
 #botonBorrarMascota,
-#botonBorrarPersona {
+#botonBorrarPersona,
+#botonBorrarRefugio,
+#botonBorrarTransito {
   border: 3px solid var(--color7);
   background-image: linear-gradient(to bottom, var(--color7) 50%, var(--colorW) 50%);
   color: var(--colorB);
