--- a/styles/style.css
+++ b/styles/style.css
@@ -409,7 +409,7 @@ body {
 @media (max-width: 767px) {
   .realContent {
     border-radius: 0px;
-    height: calc(100vh - 100px);
+    height: auto;
     width: 100vw;
   }
 }
@@ -1181,11 +1181,11 @@ dialog::backdrop {
   margin-bottom: 5px;
 }
 .modalSeccionContainer .miniContainer .dropdown {
-  width: 360px;
+  width: 325px;
   margin: 0;
 }
 .modalSeccionContainer .miniContainer input {
-  width: 360px;
+  width: 325px;
   margin: 0;
 }
 
